[#12] Added JDK 11, 17, 21 support (#27)
* update OSGI to 7.0.0
* bump orientdb to 2.1
* add java 11-21 to build workflow
* add add-opens to JAVA_OPTS in windows build workflow
* add-opens args to startup.bat
* restore IT test on windows
* remove maintenance endpoint call from UI